Fix multiple DNS overpage misalignment

--- a/package/gargoyle/files/www/themes/Gargoyle/theme.css
+++ b/package/gargoyle/files/www/themes/Gargoyle/theme.css
@@ -1,6 +1,7 @@
 li.list-group-item span:last-child 
 {
 	float: right;
+	text-align: right;
 }
 .list-group-item 
 {
